Add warning message for unimplemented templates and filters

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -286,8 +286,12 @@ label.onsetHeader=O
 label.nucleusHeader=N
 label.codaHeader=C
 label.codasallowed=Codas allowed
+label.oncfilterwarning=ADVERTENCIA: Los filtros de sílabas no están implementados para el enfoque ONC.
+label.onctemplatewarning=ADVERTENCIA: Las plantillas de sílabas no están implementadas para el enfoque ONC.
 label.moras=Moras que lleva
 label.morasHeader=Moras
+label.moraicfilterwarning=ADVERTENCIA: Sólo se implementan filtros de inicio para el enfoque moraico.
+label.moraictemplatewarning=ADVERTENCIA: Las plantillas de rima, núcleo y coda no están implementadas para el enfoque moraico.
 label.maxmoras=Máximo de moras por sílaba
 label.weightbyposition=Usar el peso por la posición
 label.onsetmaximization=Onset maximization
