--- a/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
@@ -287,8 +287,12 @@ label.onsetHeader=O
 label.nucleusHeader=N
 label.codaHeader=C
 label.codasallowed=Codas allowed
+label.oncfilterwarning=WARNING: Syllable filters are not implemented for the ONC approach.
+label.onctemplatewarning=WARNING: Syllable templates are not implemented for the ONC approach.
 label.moras=Moras born
 label.morasHeader=Moras
+label.moraicfilterwarning=WARNING: Only onset filters are implemented for the moraic approach.
+label.moraictemplatewarning=WARNING: Rime, nucleus, and coda templates are not implemented for the moraic approach.
 label.weightbyposition=Use weight by position
 label.maxmoras=Maximum moras per syllable
 label.onsetmaximization=Onset maximization
