Basic UI for NP, except for rules

--- a/src/org/sil/syllableparser/resources/SyllableParser_en.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_en.properties
@@ -138,6 +138,11 @@ moraic.view.filters=Moraic Filters
 moraic.view.words=Moraic Words
 moraic.view.wordspredictedvscorrect=Predicted vs. Correct Moraic Words
 
+np.view.rules=NP Rules
+np.view.filters=NP Filters
+np.view.words=NP Words
+np.view.wordspredictedvscorrect=Predicted vs. Correct NP Words
+
 # labels
 label.action=Action
 label.active=Active
@@ -215,6 +220,7 @@ label.no=No
 label.nopredicted=There are no predicted syllabifications.\nEither there are no words,\nall words failed to syllabify,\nor you need to invoke  
 # menu.syllabifywords goes at the end of the following message
 label.nopredictedvscorrect=There are no differences between predicted and correct syllabifications.\nEither all predicted syllabifications are correct,\nthere are no words,\nall words failed to syllabify,or\nyou need to invoke 
+label.nprules=Nuclear Projection Rules
 label.ok=OK
 label.orthographicform=Grapheme
 label.orthographicforms=Graphemes
@@ -293,6 +299,7 @@ label.morasHeader=Moras
 label.moraicfilterwarning=WARNING: Only onset filters are implemented for the moraic approach.
 label.moraictemplatewarning=WARNING: Rime, nucleus, and coda templates are not implemented for the moraic approach.
 label.maxmoras=Maximum moras per syllable
+label.npfilterwarning=WARNING: Only fail filters are implemented for the NP approach.
 label.weightbyposition=Use weight by position
 label.onsetmaximization=Onset maximization
 label.onsetprinciple=Onset principle
