--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -138,6 +138,11 @@ moraic.view.filters=Filtros móricos
 moraic.view.words=Palabras móricas
 moraic.view.wordspredictedvscorrect=Predicho vs. Correcto Palabras Móricas
 
+np.view.rules=Reglas del NP
+np.view.filters=Filtros del NP
+np.view.words=Palabras del NP
+np.view.wordspredictedvscorrect=Predicho vs. Correcto Palabras del NP
+
 #labels
 label.action=Acción
 label.analysiswritingsystem=Sistema de escritura de análisis
@@ -293,6 +298,8 @@ label.morasHeader=Moras
 label.moraicfilterwarning=ADVERTENCIA: Sólo se implementan filtros de inicio para el enfoque moraico.
 label.moraictemplatewarning=ADVERTENCIA: Las plantillas de rima, núcleo y coda no están implementadas para el enfoque moraico.
 label.maxmoras=Máximo de moras por sílaba
+label.npfilterwarning=ADVERTENCIA: Sólo se implementan filtros de fallo para el enfoque NP.
+label.nprules=Reglas de proyección nuclear
 label.weightbyposition=Usar el peso por la posición
 label.onsetmaximization=Onset maximization
 label.onsetprinciple=Onset principle
