--- a/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
@@ -138,6 +138,11 @@ moraic.view.filters=Moraic Filters
 moraic.view.words=Moraic Words
 moraic.view.wordspredictedvscorrect=Predicted vs. Correct Moraic Words
 
+np.view.rules=NP Rules
+np.view.filters=NP Filters
+np.view.words=NP Words
+np.view.wordspredictedvscorrect=Predicted vs. Correct NP Words
+
 # labels
 label.action=Action
 label.active=Actif
@@ -215,6 +220,7 @@ label.no=Non
 label.nopredicted=Il n\u2019y a pas de syllabifications prédites.\nou bien il n\u2019y a pas de mots, \nou bien aucun mot ne syllabifie,\nou bien il faut invoquer Analyser chaque mot
 # menu.syllabifywords goes at the end of the following message
 label.nopredictedvscorrect=Il n\u2019y a pas de différences entre les syllabifications prédites et correctes.\nOu bien toutes les syllabifications prédites sont correctes, \nou bien il n\u2019y a pas de mots,\nou bien aucun des mots n\u2019a syllabisé,ou bien \nil faut invoquer Analyser chaque mot
+label.nprules=Nuclear Projection Rules
 label.ok=OK
 label.orthographicform=Graphème
 label.orthographicforms=Graphèmes
@@ -293,6 +299,7 @@ label.moras=Moras born
 label.morasHeader=Moras
 label.moraicfilterwarning=WARNING: Only onset filters are implemented for the moraic approach.
 label.moraictemplatewarning=WARNING: Rime, nucleus, and coda templates are not implemented for the moraic approach.
+label.npfilterwarning=WARNING: Only fail filters are implemented for the NP approach.
 label.weightbyposition=Use weight by position
 label.maxmoras=Maximum moras per syllable
 label.onsetmaximization=Onset maximization
