NP Rules UI, first pass

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -190,6 +190,8 @@ label.choosecolor=Seleccionar color
 label.choosefont=Seleccionar la información de la fuente
 label.choosegnc=Seleccionar uno o más grafemas y/o clases naturales de grafemas
 label.choosenc=Seleccionar uno o más clases naturales
+label.chooseruleaction=Elija la acción
+label.chooserulelevel=Elija el nivel
 label.choosetype=Seleccionar un tipo
 label.filename=Nombre del archivo
 label.choosesegmnts=Seleccionar uno o más segmentos
@@ -299,6 +301,11 @@ label.moraicfilterwarning=ADVERTENCIA: Sólo se implementan filtros de inicio par
 label.moraictemplatewarning=ADVERTENCIA: Las plantillas de rima, núcleo y coda no están implementadas para el enfoque moraico.
 label.maxmoras=Máximo de moras por sílaba
 label.npfilterwarning=ADVERTENCIA: Sólo se implementan filtros de fallo para el enfoque NP.
+label.nprule.action=Acción
+label.nprule.affectedsegmentornaturalclass=Afectado
+label.nprule.context=Contexto
+label.nprule.level=Nivel
+label.nprule.obeysssp=Obedece al SSP
 label.nprules=Reglas de proyección nuclear
 label.weightbyposition=Usar el peso por la posición
 label.onsetmaximization=Onset maximization
@@ -378,6 +385,9 @@ label.moraicstatemora=mora añadió
 label.moraicstateonset=onset
 label.moraicstatetemplatefailed=plantilla fallida
 label.moraicstateunknown=
+# Nuclear Projection
+label.none=<Ninguno>
+label.nonedescription=[Elija esta opción para eliminar cualquier segmento o clase que esté presente.]
 
 # file loading/saving
 file.error=Error
@@ -586,3 +596,13 @@ exception.content=Por favor, copie la información de la excepción a continuación
 exception.header=Ocurrió un grave error.
 exception.label=La excepción fue Stacktrace:
 exception.title=¡Error encontrado!
+
+#NP rule actions and levels
+nprule.action.attach=Conectar
+nprule.action.build=Construir
+nprule.action.left_adjoin=Adjuntar a la izquierda
+nprule.action.right_adjoin=Adjuntar a la derecha
+nprule.level.all=Todos
+nprule.level.n=N
+nprule.level.n_bar=N'
+nprule.level.n_double_bar=N''
