--- a/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
@@ -159,6 +159,8 @@ label.choosefont=Choose font information
 label.choosegnc=Choisir un graphèmes et/ou classe naturelle de graphème ou plusieurs
 label.choosenc=Choisir une classe naturelle ou plusieurs
 label.choosepredicted=Choisir quelles syllabifications prédites à convertir en syllabification correcte
+label.chooseruleaction=Choose action
+label.chooserulelevel=Choose level
 label.choosesegments=Choisir un segment ou plusieurs
 label.choosesnc=Choisir un segment et/ou classe naturelle ou plusieurs
 label.choosetype=Choose type
@@ -220,6 +222,11 @@ label.no=Non
 label.nopredicted=Il n\u2019y a pas de syllabifications prédites.\nou bien il n\u2019y a pas de mots, \nou bien aucun mot ne syllabifie,\nou bien il faut invoquer Analyser chaque mot
 # menu.syllabifywords goes at the end of the following message
 label.nopredictedvscorrect=Il n\u2019y a pas de différences entre les syllabifications prédites et correctes.\nOu bien toutes les syllabifications prédites sont correctes, \nou bien il n\u2019y a pas de mots,\nou bien aucun des mots n\u2019a syllabisé,ou bien \nil faut invoquer Analyser chaque mot
+label.nprule.action=Action
+label.nprule.affectedsegmentornaturalclass=Affected
+label.nprule.context=Context
+label.nprule.level=Level
+label.nprule.obeysssp=Obeys SSP
 label.nprules=Nuclear Projection Rules
 label.ok=OK
 label.orthographicform=Graphème
@@ -380,6 +387,9 @@ label.moraicstatemora=mora added
 label.moraicstateonset=onset
 label.moraicstatetemplatefailed=template failed
 label.moraicstateunknown=
+# Nuclear Projection
+label.none=<None>
+label.nonedescription=[Choose this to remove whatever segment or class is present.]
 
 # file loading/saving
 file.error=Erreur
@@ -589,3 +599,13 @@ exception.content=Please copy the exception information below, email it to ashen
 exception.header=A serious error happened.
 exception.label=The exception stacktrace was:
 exception.title=Error Found!
+
+#NP rule actions and levels
+nprule.action.attach=Attach
+nprule.action.build=Build
+nprule.action.left_adjoin=Left adjoin
+nprule.action.right_adjoin=Right adjoin
+nprule.level.all=All
+nprule.level.n=N
+nprule.level.n_bar=N'
+nprule.level.n_double_bar=N''
