Add NP Rule validator

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -606,3 +606,8 @@ nprule.level.all=Todos
 nprule.level.n=N
 nprule.level.n_bar=N'
 nprule.level.n_double_bar=N''
+
+#NP rule messages
+nprule.message.buildall=Una acción de construcción debe utilizar el nivel Todo y debe tener un elemento afectado pero no un elemento de contexto.  Esta norma se ignorará hasta que se solucione.
+nprule.message.attach=Una acción de Adjuntar no puede utilizar el nivel TODO y debe tener un elemento afectado y un elemento de contexto.  Esta norma se ignorará hasta que se solucione.
+nprule.message.adjoin=Una acción de Adjuntar a la izquierda (o a la derecha) no puede utilizar el nivel TODO y debe tener un elemento afectado y un elemento de contexto.  Esta norma se ignorará hasta que se solucione.
