NP rules UI pass 3

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -231,6 +231,7 @@ label.filterwords=Filtrar Palabras
 label.syllabifying=Silabificar: 
 label.parserresult=Resultado del analizador
 label.parsertree=Diagrama de árbol
+label.ruletree=Diagrama de árbol
 label.untested=No probado
 label.sethyphenationparameters=Establecer Parámetros de Palabras con Guiones
 label.success=Éxito
@@ -599,6 +600,7 @@ exception.title=¡Error encontrado!
 
 #NP rule actions and levels
 nprule.action.attach=Conectar
+nprule.action.augment=Aumentar
 nprule.action.build=Construir
 nprule.action.left_adjoin=Adjuntar a la izquierda
 nprule.action.right_adjoin=Adjuntar a la derecha
@@ -608,6 +610,7 @@ nprule.level.n_bar=N'
 nprule.level.n_double_bar=N''
 
 #NP rule messages
-nprule.message.buildall=Una acción de construcción debe utilizar el nivel Todo y debe tener un elemento afectado pero no un elemento de contexto.  Esta norma se ignorará hasta que se solucione.
-nprule.message.attach=Una acción de Adjuntar no puede utilizar el nivel TODO y debe tener un elemento afectado y un elemento de contexto.  Esta norma se ignorará hasta que se solucione.
-nprule.message.adjoin=Una acción de Adjuntar a la izquierda (o a la derecha) no puede utilizar el nivel TODO y debe tener un elemento afectado y un elemento de contexto.  Esta norma se ignorará hasta que se solucione.
+nprule.message.buildall=Una acción de Construir debe utilizar el nivel TODO y debe tener un elemento afectado pero no un elemento de contexto.\n\nEsta norma se ignorará hasta que se solucione.
+nprule.message.attach=Una acción de Adjuntar no puede utilizar el nivel TODO y debe tener un elemento afectado y un elemento de contexto.\n\nEsta norma se ignorará hasta que se solucione.
+nprule.message.augment=Una acción de Aumentar no puede utilizar el nivel TODO y debe tener tanto un elemento afectado como un elemento de contexto.\n\nEsta regla será ignorada hasta que esto se solucione.
+nprule.message.adjoin=Una acción de Adjuntar a la izquierda (o a la derecha) no puede utilizar el nivel TODO y debe tener un elemento afectado y un elemento de contexto.\n\nEsta norma se ignorará hasta que se solucione.
