--- a/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
@@ -238,6 +238,7 @@ label.predictedsyllabification=Ruptures syllabiques prédites
 label.restoreproject=Restaurer projet
 label.results=Résultats:
 label.righttoleft=Right-to-left
+label.ruletree=Diagramme d'arbre
 label.segment=Segment
 label.segmentinventory=Liste des segments
 label.segmentornaturalclass=Segment ou classe naturelle 
@@ -602,6 +603,7 @@ exception.title=Error Found!
 
 #NP rule actions and levels
 nprule.action.attach=Attach
+nprule.action.augment=Augment
 nprule.action.build=Build
 nprule.action.left_adjoin=Left adjoin
 nprule.action.right_adjoin=Right adjoin
@@ -611,6 +613,7 @@ nprule.level.n_bar=N'
 nprule.level.n_double_bar=N''
 
 #NP rule messages
-nprule.message.buildall=A Build action must use the All level and must have an affected item but not a context item.  This rule will be ignored until this is fixed.
-nprule.message.attach=An Attach action cannot use the ALL level and must have both an affected item and a context item.  This rule will be ignored until this is fixed.
-nprule.message.adjoin=A Left (or Right) Adjoin action cannot use the ALL level and must have both an affected item and a context item.  This rule will be ignored until this is fixed.
+nprule.message.buildall=A Build action must use the All level and must have an affected item but not a context item.\n\nThis rule will be ignored until this is fixed.
+nprule.message.attach=An Attach action cannot use the ALL level and must have both an affected item and a context item.\n\nThis rule will be ignored until this is fixed.
+nprule.message.augment=An Augment action cannot use the ALL level and must have both an affected item and a context item.\n\nThis rule will be ignored until this is fixed.
+nprule.message.adjoin=A Left (or Right) Adjoin action cannot use the ALL level and must have both an affected item and a context item.\n\nThis rule will be ignored until this is fixed.
