Report error if first rule is not a build all rule.

--- a/src/org/sil/syllableparser/resources/SyllableParser_en.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_en.properties
@@ -611,6 +611,7 @@ nprule.level.n_double_bar=N''
 
 #NP rule messages
 nprule.message.buildall=A Build action must use the All level and must have an affected item but not a context item.\n\nThis rule will be ignored until this is fixed.
+nprule.message.buildisfirst=The first rule must have a Build action and must use the All level and must have an affected item but not a context item.\n\nThis rule will be ignored until this is fixed.
 nprule.message.attach=An Attach action cannot use the ALL level and must have both an affected item and a context item.\n\nThis rule will be ignored until this is fixed.
 nprule.message.augment=An Augment action cannot use the ALL level and must have both an affected item and a context item.\n\nThis rule will be ignored until this is fixed.
 nprule.message.adjoin=A Left (or Right) Adjoin action cannot use the ALL level and must have both an affected item and a context item.\n\nThis rule will be ignored until this is fixed.
