--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -611,6 +611,7 @@ nprule.level.n_double_bar=N''
 
 #NP rule messages
 nprule.message.buildall=Una acción de Construir debe utilizar el nivel TODO y debe tener un elemento afectado pero no un elemento de contexto.\n\nEsta norma se ignorará hasta que se solucione.
+nprule.message.buildisfirst=La primera regla debe tener una acción de Construcción y debe utilizar el nivel Todo y debe tener un elemento afectado pero no un elemento de contexto.\n\nThis rule will be ignored until this is fixed.
 nprule.message.attach=Una acción de Adjuntar no puede utilizar el nivel TODO y debe tener un elemento afectado y un elemento de contexto.\n\nEsta norma se ignorará hasta que se solucione.
 nprule.message.augment=Una acción de Aumentar no puede utilizar el nivel TODO y debe tener tanto un elemento afectado como un elemento de contexto.\n\nEsta regla será ignorada hasta que esto se solucione.
 nprule.message.adjoin=Una acción de Adjuntar a la izquierda (o a la derecha) no puede utilizar el nivel TODO y debe tener un elemento afectado y un elemento de contexto.\n\nEsta norma se ignorará hasta que se solucione.
