Add tracing to rules, including try a word; pass 1

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -389,6 +389,19 @@ label.moraicstateunknown=
 # Nuclear Projection
 label.none=<Ninguno>
 label.nonedescription=[Elija esta opción para eliminar cualquier segmento o clase que esté presente.]
+# Nuclear Projection Syllabification tracing info status messages
+label.npstiappendedsegmenttosyllable=Se ha añadido el segmento '{0}' a la sílaba.
+label.npstiapplyingrule=Aplicar la regla: {0}
+label.npstibuiltallnodes=Construido todos los nodos en el segmento '{0}'.
+label.npstifilterfailed=El filtro ha fallado: {0}
+label.npstinosegmentsmatchedrule=Ningún segmento coincide con la regla.
+label.npstionsetsonallbutfirstbutmissingonset=Los inicios son necesarios en todas las sílabas excepto en la primera, pero algunas sílabas no iniciales no tenían inicio.
+label.npstionsetsoneverybutmissingonset=Los inicios son necesarios en cada sílaba, pero algunas sílabas no tenían inicio.
+label.npstiprependedsegmenttosyllable=Predice el segmento '{0}' a la sílaba.
+label.npstiruleignoresssp=La norma ignora la SSP.
+label.npstisomesegmentsnotsyllabified=Algunos segmentos no estaban silabeados.
+label.npstisspfailed=La SSP ha fallado.
+label.npstissppassed=La SSP ha sido aprobada.
 
 # file loading/saving
 file.error=Error
@@ -535,6 +548,8 @@ report.tawoncdetails=Los detalles de las asignaciones de segmento a clase natura
 report.tawoncstatus=Estado
 report.tawonctype=Tipo
 report.tawmoraicdetails=Los detalles de las asignaciones de segmento a clase natural, la comparación de sonoridad entre pares de clases naturales y el análisis de moras se encuentran a continuación. Si un paso falló, está en {0}. De lo contrario está en {2}.
+report.tawnpdetails=A continuación se detallan los mapeos de segmentos a clases naturales y la aplicación de reglas.  Si un paso falló, está en {0}.  Si no, está en {2}.
+report.tawnpinfo=Información sobre la estructura o el SSP
 report.failurecolorword=red
 report.matchedcolorword=blue
 report.successcolorword=green
