--- a/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
@@ -391,6 +391,19 @@ label.moraicstateunknown=
 # Nuclear Projection
 label.none=<None>
 label.nonedescription=[Choose this to remove whatever segment or class is present.]
+# Nuclear Projection Syllabification tracing info status messages
+label.npstiappendedsegmenttosyllable=Appended segment '{0}' to syllable.
+label.npstiapplyingrule=Applying rule: {0}
+label.npstibuiltallnodes=Built all nodes upon segment '{0}'.
+label.npstifilterfailed=Filter failed: {0}
+label.npstinosegmentsmatchedrule=No segments matched the rule.
+label.npstionsetsonallbutfirstbutmissingonset=Onsets are required on all but the first syllable, but some non-initial syllables did not have an onset.
+label.npstionsetsoneverybutmissingonset=Onsets are required on every syllable, but some syllables did not have an onset.
+label.npstiprependedsegmenttosyllable=Prepended segment '{0}' to syllable.
+label.npstiruleignoresssp=The rule ignores the SSP.
+label.npstisomesegmentsnotsyllabified=Some segments were not syllabified.
+label.npstisspfailed=SSP failed.
+label.npstissppassed=SSP passed.
 
 # file loading/saving
 file.error=Erreur
@@ -538,6 +551,8 @@ report.tawoncdetails=The details of the segment to natural class mappings, the s
 report.tawoncstatus=Status
 report.tawonctype=Type
 report.tawmoraicdetails=The details of the segment to natural class mappings, the sonority comparison between pairs of natural classes, and the parsing of moras is below.  If a step failed, it is in {0}.  Otherwise it is in {2}.
+report.tawnpdetails=The details of the segment to natural class mappings and the application of rules is below.  If a step failed, it is in {0}.  Otherwise it is in {2}.
+report.tawnpinfo=Structure or SSP info
 report.failurecolorword=red
 report.matchedcolorword=blue
 report.successcolorword=green
