Add left and right adunction rule handling, including tracing.

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -402,6 +402,12 @@ label.npstiruleignoresssp=La norma ignora la SSP.
 label.npstisomesegmentsnotsyllabified=Algunos segmentos no estaban silabeados.
 label.npstisspfailed=La SSP ha fallado.
 label.npstissppassed=La SSP ha sido aprobada.
+label.npstileftadjoinedsegmenttonbarnode=Segmento '{0}' contiguo izquierdo al nodo N'.
+label.npstileftadjoinedsegmenttondoublebarnode=Segmento '{0}' contiguo izquierdo al nodo N'.
+label.npstileftadjoinedsegmenttonnode=Segmento '{0}' contiguo izquierdo al nodo N'.
+label.npstirightadjoinedsegmenttonbarnode=Segmento '{0}' contiguo derecho al nodo N'.
+label.npstirightadjoinedsegmenttondoublebarnode=Segmento '{0}' contiguo derecho al nodo N''.
+label.npstirightadjoinedsegmenttonnode=Segmento '{0}' contiguo derecho al nodo N.
 
 # file loading/saving
 file.error=Error
