--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -516,6 +516,12 @@ report.coda=Coda
 report.moraicapproachabbreviation=Moraic
 report.moraictitle=Comparación del enfoque moraico
 report.moraiccomparisonof=Enfoque moraico Comparación entre:
+report.npapproachabbreviation=NP
+report.nptitle=Comparación del NP Approach
+report.npcomparisonof=Comparación del NP Approach entre
+report.otapproachabbreviation=OT
+report.ottitle=Comparación del OT Approach
+report.otcomparisonof=Comparación del OT Approach entre
 report.moras=Moras
 report.syllabificationparameters=Parámetros de silabeo
 report.sameonsetmaximization=La maximización de inicio es la misma.
