Add np comparsison

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -542,6 +542,10 @@ report.templates=Plantillas
 report.sametemplates=Ambos tienen las mismas plantillas.
 report.templateswhichdiffer=Las siguientes plantillas difieren entre las dos. 
 report.templateinorder=El orden de las plantillas se muestra a continuación.
+report.rules=Reglas
+report.samerules=Ambos tienen las mismas reglas
+report.ruleswhichdiffer=Las siguientes reglas difieren entre ambos.
+report.rulesinorder=El orden de las reglas se muestra a continuación.
 # Try a Word
 report.tawtitle=Silabación de {0}
 report.tawsegments=Analizando en segmentos
