--- a/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
@@ -544,6 +544,10 @@ report.templates=Templates
 report.sametemplates=Both have the same templates.
 report.templateswhichdiffer=The following templates differ between the two. 
 report.templateinorder=The order of the templates is shown below.
+report.rules=Rules
+report.samerules=Both have the same rules.
+report.ruleswhichdiffer=The following rules differ between the two.
+report.rulesinorder=The order of the rules is shown below.
 # Try a Word
 report.tawtitle=Syllabification de {0}
 report.tawsegments=Analysant en segments
