First pass at OT UI

--- a/src/org/sil/syllableparser/resources/SyllableParser_en.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_en.properties
@@ -143,6 +143,11 @@ np.view.filters=NP Filters
 np.view.words=NP Words
 np.view.wordspredictedvscorrect=Predicted vs. Correct NP Words
 
+ot.view.constraints=OT Constraints
+ot.view.constraintrankings=OT Constraint Rankings
+ot.view.words=OT Words
+ot.view.wordspredictedvscorrect=Predicted vs. Correct OT Words
+
 # labels
 label.action=Action
 label.active=Active
@@ -228,6 +233,11 @@ label.nprule.context=Context
 label.nprule.level=Level
 label.nprule.obeysssp=Obeys SSP
 label.nprules=Nuclear Projection Rules
+label.otconstraintranking=Constraint Ranking
+label.otconstraintrankings=Constraint Rankings
+label.otconstraints=OT Constraints
+label.otconstrainttree=Constraint diagram
+label.otrepresentation=Representation
 label.ok=OK
 label.orthographicform=Grapheme
 label.orthographicforms=Graphemes
@@ -407,6 +417,14 @@ label.npstileftadjoinedsegmenttonnode=Left adjoined segment '{0}' to N node.
 label.npstirightadjoinedsegmenttonbarnode=Right adjoined segment '{0}' to N' node.
 label.npstirightadjoinedsegmenttondoublebarnode=Right adjoined segment '{0}' to N'' node.
 label.npstirightadjoinedsegmenttonnode=Right adjoined segment '{0}' to N node.
+# OT
+label.affectedelement1=Affected element 1
+label.affectedelement2=Affected element 2
+label.any=<Any>
+label.anydescription=[Indicates that any segment will match this constraint part.]
+label.otconstrainttree=Diagram
+label.structuraloptions1=Structural options 1
+label.structuraloptions2=Structural options 2
 
 # file loading/saving
 file.error=Error
@@ -646,3 +664,9 @@ nprule.message.buildisfirst=The first rule must have a Build action and must use
 nprule.message.attach=An Attach action cannot use the ALL level and must have both an affected item and a context item.\n\nThis rule will be ignored until this is fixed.
 nprule.message.augment=An Augment action cannot use the ALL level and must have both an affected item and a context item.\n\nThis rule will be ignored until this is fixed.
 nprule.message.adjoin=A Left (or Right) Adjoin action cannot use the ALL level and must have both an affected item and a context item.\n\nThis rule will be ignored until this is fixed.
+
+#OT constraint messages
+otconstraint.message.element1.cannotbeempty=Affected element 1 cannot be empty
+otconstraint.message.element1.invalidoptions=The first element has invalid structural options; you have at least one of "o", "n", "c", or "u" checked.
+otconstraint.message.element2.invalidoptions=The second element has invalid structural options; you have at least one of "o", "n", "c", or "u" checked.
+otconstraint.message.element2.optionsignored=The second element's structural options will be ignored.
