--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -143,6 +143,11 @@ np.view.filters=Filtros del NP
 np.view.words=Palabras del NP
 np.view.wordspredictedvscorrect=Predicho vs. Correcto Palabras del NP
 
+ot.view.constraints=Restricciones de TO
+ot.view.constraintrankings=Clasificación de las restricciones de OT
+ot.view.words=Palabras de OT
+ot.view.wordspredictedvscorrect=Predicho vs. Correcto Palabras de OT
+
 #labels
 label.action=Acción
 label.analysiswritingsystem=Sistema de escritura de análisis
@@ -308,6 +313,11 @@ label.nprule.context=Contexto
 label.nprule.level=Nivel
 label.nprule.obeysssp=Obedece al SSP
 label.nprules=Reglas de proyección nuclear
+label.otconstraintranking=Clasificación de las restricciones
+label.otconstraintrankings=Clasificaciónes de las restricciones
+label.otconstraints=Restricciones de OT
+label.otconstrainttree=Diagrama de restricciones
+label.otrepresentation=Representación
 label.weightbyposition=Usar el peso por la posición
 label.onsetmaximization=Onset maximization
 label.onsetprinciple=Onset principle
@@ -408,6 +418,14 @@ label.npstileftadjoinedsegmenttonnode=Segmento '{0}' contiguo izquierdo al nodo 
 label.npstirightadjoinedsegmenttonbarnode=Segmento '{0}' contiguo derecho al nodo N'.
 label.npstirightadjoinedsegmenttondoublebarnode=Segmento '{0}' contiguo derecho al nodo N''.
 label.npstirightadjoinedsegmenttonnode=Segmento '{0}' contiguo derecho al nodo N.
+# OT
+label.affectedelement1=Elemento afectado 1
+label.affectedelement2=Elemento afectado 2
+label.any=<Cualquier>
+label.anydescription=[Indica que cualquier segmento coincidirá con esta parte de la restricción.]
+label.otconstrainttree=Diagram
+label.structuraloptions1=Structural options 1
+label.structuraloptions2=Structural options 2
 
 # file loading/saving
 file.error=Error
@@ -646,3 +664,9 @@ nprule.message.buildisfirst=La primera regla debe tener una acción de Construcci
 nprule.message.attach=Una acción de Adjuntar no puede utilizar el nivel TODO y debe tener un elemento afectado y un elemento de contexto.\n\nEsta norma se ignorará hasta que se solucione.
 nprule.message.augment=Una acción de Aumentar no puede utilizar el nivel TODO y debe tener tanto un elemento afectado como un elemento de contexto.\n\nEsta regla será ignorada hasta que esto se solucione.
 nprule.message.adjoin=Una acción de Adjuntar a la izquierda (o a la derecha) no puede utilizar el nivel TODO y debe tener un elemento afectado y un elemento de contexto.\n\nEsta norma se ignorará hasta que se solucione.
+
+#OT constraint messages
+otconstraint.message.element1.cannotbeempty=El elemento afectado 1 no puede estar vacío
+otconstraint.message.element1.invalidoptions=El primer elemento tiene opciones estructurales no válidas; tiene marcada al menos una de las opciones "o", "n", "c" o "u".
+otconstraint.message.element2.invalidoptions=El segundo elemento tiene opciones estructurales no válidas; tiene marcada al menos una de las opciones "o", "n", "c" o "u".
+otconstraint.message.element2.optionsignored=Las opciones estructurales del segundo elemento serán ignoradas.
