Improve OT constraint UI

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -201,6 +201,7 @@ label.choosetype=Seleccionar un tipo
 label.filename=Nombre del archivo
 label.choosesegmnts=Seleccionar uno o más segmentos
 label.choosesnc=Seleccionar uno o más segmentos y/o clases naturales
+label.choosesnc1=Seleccionar uno segmento o clase naturale
 label.vernacularwritingsystem=Sistema de escritura vernáculo
 label.word=Palabra
 label.wordhiddenbyfilter=La palabra '{0}' está oculta por los filtros.
