--- a/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
@@ -168,6 +168,7 @@ label.chooseruleaction=Choose action
 label.chooserulelevel=Choose level
 label.choosesegments=Choisir un segment ou plusieurs
 label.choosesnc=Choisir un segment et/ou classe naturelle ou plusieurs
+label.choosesnc1=Choisir un segment ou classe naturelle
 label.choosetype=Choose type
 label.code=Code
 label.color=Couleur
