Put word initial and word final on same line with affected element.

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -669,5 +669,8 @@ nprule.message.adjoin=Una acción de Adjuntar a la izquierda (o a la derecha) no 
 #OT constraint messages
 otconstraint.message.element1.cannotbeempty=El elemento afectado 1 no puede estar vacío
 otconstraint.message.element1.invalidoptions=El primer elemento tiene opciones estructurales no válidas; tiene marcada al menos una de las opciones "o", "n", "c" o "u".
+otconstraint.message.element1.nowordfinal=El primer elemento no puede ser final de palabra cuando hay un segundo elemento
+otconstraint.message.element2.nowordinitial=El segundo elemento no puede ser la inicial de la palabra.
 otconstraint.message.element2.invalidoptions=El segundo elemento tiene opciones estructurales no válidas; tiene marcada al menos una de las opciones "o", "n", "c" o "u".
 otconstraint.message.element2.optionsignored=Las opciones estructurales del segundo elemento serán ignoradas.
+otconstraint.message.element2.wordfinalignored=El ajuste final de la palabra del segundo elemento será ignorado.
