First pass on rankings UI

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -195,6 +195,8 @@ label.choosecolor=Seleccionar color
 label.choosefont=Seleccionar la información de la fuente
 label.choosegnc=Seleccionar uno o más grafemas y/o clases naturales de grafemas
 label.choosenc=Seleccionar uno o más clases naturales
+label.chooseotconstraints=Ordenar las restricciones en la clasificación
+label.chooseotrankinginitialization=Elija una clasificación para empezar
 label.chooseruleaction=Elija la acción
 label.chooserulelevel=Elija el nivel
 label.choosetype=Seleccionar un tipo
