--- a/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
@@ -163,6 +163,8 @@ label.choosecolor=Choisir color
 label.choosefont=Choose font information
 label.choosegnc=Choisir un graphèmes et/ou classe naturelle de graphème ou plusieurs
 label.choosenc=Choisir une classe naturelle ou plusieurs
+label.chooseotconstraints=Order constraints in the ranking
+label.chooseotrankinginitialization=Choose a ranking to begin with
 label.choosepredicted=Choisir quelles syllabifications prédites à convertir en syllabification correcte
 label.chooseruleaction=Choose action
 label.chooserulelevel=Choose level
