First pass at OT Try a Word and tracing

--- a/src/org/sil/syllableparser/resources/SyllableParser_en.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_en.properties
@@ -587,6 +587,10 @@ report.tawnpinfo=Structure or SSP info
 report.tawoncstatus=Status
 report.tawonctype=Type
 report.tawmoraicdetails=The details of the segment to natural class mappings, the sonority comparison between pairs of natural classes, and the parsing of moras is below.  If a step failed, it is in {0}.  Otherwise it is in {2}.
+report.tawotdetails=The evaluation of constraints (shown via candidate grids) and building of syllables is below.  When a structural option matches for a constraint, it is shown with a {2} background.
+report.tawotinitialization=Initialization
+report.tawothousekeeping=Word initial/word final Housekeeping
+report.tawotaddsyllable=Adding syllable: {0}.
 report.failurecolorword=red
 report.matchedcolorword=blue
 report.successcolorword=green
