--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -587,6 +587,11 @@ report.tawonctype=Tipo
 report.tawmoraicdetails=Los detalles de las asignaciones de segmento a clase natural, la comparación de sonoridad entre pares de clases naturales y el análisis de moras se encuentran a continuación. Si un paso falló, está en {0}. De lo contrario está en {2}.
 report.tawnpdetails=A continuación se detallan los mapeos de segmentos a clases naturales y la aplicación de reglas.  Si un paso falló, está en {0}.  Si no, está en {2}.
 report.tawnpinfo=Información sobre la estructura o el SSP
+report.tawotdetails=A continuación se muestra la evaluación de las restricciones (mostradas a través de cuadrículas de candidatos) y la construcción de sílabas.  Cuando una opción estructural coincide con una restricción, se muestra con un fondo {2}.
+
+report.tawotinitialization=Inicialización
+report.tawothousekeeping=Palabra inicial/palabra final Limpieza de la casa
+report.tawotaddsyllable=Añadir sílaba: {0}.
 report.failurecolorword=red
 report.matchedcolorword=blue
 report.successcolorword=green
