Add prune second element option for constraint Add failure if only option is unparsed Update Try a Word

--- a/src/org/sil/syllableparser/resources/SyllableParser_en.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_en.properties
@@ -426,6 +426,7 @@ label.affectedelement2=Affected element 2
 label.any=<Any>
 label.anydescription=[Indicates that any segment will match this constraint part.]
 label.otconstrainttree=Diagram
+label.pruneelement2=Prune element 2
 label.structuraloptions1=Structural options 1
 label.structuraloptions2=Structural options 2
 
@@ -587,7 +588,7 @@ report.tawnpinfo=Structure or SSP info
 report.tawoncstatus=Status
 report.tawonctype=Type
 report.tawmoraicdetails=The details of the segment to natural class mappings, the sonority comparison between pairs of natural classes, and the parsing of moras is below.  If a step failed, it is in {0}.  Otherwise it is in {2}.
-report.tawotdetails=The evaluation of constraints (shown via candidate grids) and building of syllables is below.  When a structural option matches for a constraint, it is shown with a {2} background.
+report.tawotdetails=The evaluation of constraints (shown via candidate grids) and building of syllables is below.  If the parse failed, when a structural option matches for a constraint, it is shown with a {0} background.  Otherwise it has a {2} background.
 report.tawotinitialization=Initialization
 report.tawothousekeeping=Word initial/word final Housekeeping
 report.tawotaddsyllable=Adding syllable: {0}.
