--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -427,6 +427,7 @@ label.affectedelement2=Elemento afectado 2
 label.any=<Cualquier>
 label.anydescription=[Indica que cualquier segmento coincidirá con esta parte de la restricción.]
 label.otconstrainttree=Diagram
+label.pruneelement2=Podar el elemento 2
 label.structuraloptions1=Structural options 1
 label.structuraloptions2=Structural options 2
 
@@ -587,7 +588,7 @@ report.tawonctype=Tipo
 report.tawmoraicdetails=Los detalles de las asignaciones de segmento a clase natural, la comparación de sonoridad entre pares de clases naturales y el análisis de moras se encuentran a continuación. Si un paso falló, está en {0}. De lo contrario está en {2}.
 report.tawnpdetails=A continuación se detallan los mapeos de segmentos a clases naturales y la aplicación de reglas.  Si un paso falló, está en {0}.  Si no, está en {2}.
 report.tawnpinfo=Información sobre la estructura o el SSP
-report.tawotdetails=A continuación se muestra la evaluación de las restricciones (mostradas a través de cuadrículas de candidatos) y la construcción de sílabas.  Cuando una opción estructural coincide con una restricción, se muestra con un fondo {2}.
+report.tawotdetails=A continuación se muestra la evaluación de las restricciones (mostradas mediante cuadrículas de candidatos) y la construcción de las sílabas.  Si el análisis silábico falló, cuando una opción estructural coincide con una restricción, se muestra con un fondo {0}.  En caso contrario, tiene un fondo {2}.
 
 report.tawotinitialization=Inicialización
 report.tawothousekeeping=Palabra inicial/palabra final Limpieza de la casa
