Add comparisons for the OT approach

--- a/src/org/sil/syllableparser/resources/SyllableParser_en.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_en.properties
@@ -567,6 +567,13 @@ report.rules=Rules
 report.samerules=Both have the same rules.
 report.ruleswhichdiffer=The following rules differ between the two.
 report.rulesinorder=The order of the rules is shown below.
+report.constraints=Constraints
+report.sameconstraints=Both have the same constraints.
+report.constraintswhichdiffer=The following constraints differ between the two.
+report.constraintrankings=Constraint rankings
+report.sameconstraintrankings=Both have the same constraint rankings.
+report.constraintrankingswhichdiffer=The following constraint rankings differ between the two.
+report.constraintsinorder=The order of the constraints is shown below.
 # Try a Word
 report.tawtitle=Syllabification of {0}
 report.tawsegments=Parsing into segments
