--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -568,6 +568,13 @@ report.rules=Reglas
 report.samerules=Ambos tienen las mismas reglas
 report.ruleswhichdiffer=Las siguientes reglas difieren entre ambos.
 report.rulesinorder=El orden de las reglas se muestra a continuación.
+report.constraints=Restricciones
+report.sameconstraints=Ambos tienen las mismas restricciones.
+report.constraintswhichdiffer=Las siguientes restricciones difieren entre ambos.
+report.constraintrankings=Clasificación de las restricciones
+report.sameconstraintrankings=Ambos tienen la misma clasificación de restricciones.
+report.constraintrankingswhichdiffer=Las siguientes clasificaciones de las restricciones difieren entre ambos.
+report.constraintsinorder=El orden de las restricciones se muestra a continuación.
 # Try a Word
 report.tawtitle=Silabación de {0}
 report.tawsegments=Analizando en segmentos
