Add doc for OT Add Hammond 1997 to Help menu Add Duplicate ranking to Edit menu Improve OT syllabification to not remove when every option in constraint is same as in segment

--- a/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
@@ -35,6 +35,7 @@ menu.copy=_Copier
 menu.paste=_Coller
 menu.insertnew=_Nouveau point
 menu.remove=_Supprimer point
+menu.duplicateranking=Duplicate OT Constraint Ranking
 menu.nextitem=Ne_xt item
 menu.previousitem=Pre_vious item
 #menu.language=_Language
@@ -65,6 +66,7 @@ menu.about=_Au sujet d\u2019Asheninka
 menu.userdocumentation=_Documentation d\u2019utilisateur
 menu.suggestedsteps=_Etapes suggérées
 menu.helpintro=_Introduction à la syllabification
+menu.helphammond1997=_Hammond (1997)
 
 # About dialog
 about.header=Au sujet d\u2019Asheninka
