--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -35,6 +35,7 @@ menu.copy=_Copiar
 menu.paste=_Pegar
 menu.insertnew=_Nueva Ítem
 menu.remove=_Remover Ítem
+menu.duplicateranking=Duplicar la clasificación de las restricciones de OT
 menu.nextitem=Ítem proximo
 menu.previousitem=Ítem anterior
 #menu.language=_Lengua
@@ -65,6 +66,7 @@ menu.about=_A cerca de Asheninka
 menu.userdocumentation=Manual del Usuario
 menu.suggestedsteps=_Pasos sugeridos
 menu.helpintro=_Introducción a la silabificación
+menu.helphammond1997=_Hammond (1997)
 
 # About dialog
 about.header=A cerca Asheninka
